--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>自制力协议 | Self-Control Protocol</title>
     <link rel="stylesheet" href="styles/main.css">
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore-compat.js"></script>
     <style>
         /* Custom Scrollbar for nicer look */
         ::-webkit-scrollbar {
@@ -29,11 +32,11 @@
         }
     </style>
 </head>
-<body class="bg-gray-100 text-gray-900 font-sans h-screen overflow-hidden selection:bg-indigo-100 selection:text-indigo-700">
+<body class="theme-light bg-gray-100 text-gray-900 font-sans h-screen overflow-hidden selection:bg-indigo-100 selection:text-indigo-700">
     <div id="app" class="flex flex-col md:flex-row h-full max-w-7xl mx-auto bg-white shadow-2xl overflow-hidden md:rounded-xl md:my-4">
         
         <!-- Navigation (Sidebar on Desktop, Bottom on Mobile) -->
-        <nav class="order-2 md:order-1 bg-white border-t md:border-t-0 md:border-r border-gray-200 flex md:flex-col justify-around md:justify-start p-2 md:p-6 shadow-lg md:w-64 z-10 shrink-0">
+        <nav class="order-2 md:order-1 panel border-t md:border-t-0 md:border-r border-gray-200 flex md:flex-col justify-around md:justify-start p-2 md:p-6 shadow-lg md:w-64 z-10 shrink-0">
             <div class="hidden md:block mb-8 px-2">
                  <h1 class="text-2xl font-extrabold text-indigo-600 tracking-tight flex items-center gap-2">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -58,10 +61,21 @@
                 </svg>
                 <span class="text-xs md:text-sm font-bold relative z-10">战略 (RSIP)</span>
             </button>
+            <div class="mt-6 space-y-3">
+                <select id="theme-select" class="w-full text-sm border border-gray-200 rounded-lg px-3 py-2">
+                    <option value="system">跟随系统</option>
+                    <option value="light">明亮</option>
+                    <option value="dark">黑暗</option>
+                </select>
+                <button id="btn-login" class="w-full px-4 py-2 text-sm bg-white text-gray-700 rounded-lg border border-gray-200 hover:bg-gray-50">登录</button>
+                <button id="btn-logout" class="w-full px-4 py-2 text-sm bg-white text-gray-700 rounded-lg border border-gray-200 hover:bg-gray-50 hidden">退出</button>
+                <button id="btn-config" class="w-full px-4 py-2 text-xs bg-indigo-50 text-indigo-700 rounded-lg border border-indigo-100 hover:bg-indigo-100">配置云同步</button>
+                <button id="btn-sync" class="w-full px-4 py-2 text-xs bg-green-50 text-green-700 rounded-lg border border-green-100 hover:bg-green-100">云同步</button>
+            </div>
         </nav>
 
         <!-- Main Content Area -->
-        <main class="order-1 md:order-2 flex-1 flex flex-col h-full overflow-hidden relative bg-gray-50/50">
+        <main class="order-1 md:order-2 flex-1 flex flex-col h-full overflow-hidden relative panel">
              <!-- Mobile Header -->
             <header class="md:hidden bg-indigo-600 text-white p-4 shadow-md z-20 flex items-center justify-between">
                 <div class="flex items-center gap-2">
